Enable null for team venue and home match day/time
Team.SelectVenue, TeamApplication.SelectVenue
* Change 'Not found' response to JsonResponseRedirect
* Change display message from TeamDataFailure to VenueSelectFailure

TeamApplication
* Call SignInManager.RefreshSignInAsync() after a user has registered a new team, so that it's immediately visible in Team.MyTeam
* Enable null for team venue and home match day/time
  * Add ApplicationSessionModel.TeamVenueSetKind to track "not set, no venue, existing venue, new venue"
  * Add TeamVenueValidator to validate selected venue types

TeamEditor component
* Add 'readonly' attribute to HTML element instead of 'disabled' for 'null' value

VenueSelector component
* Add 'Criteria.NotSpecified' if this is allowed in tenant specific 'TournamentContext'
* Include 'Criteria.NotSpecified' to selectable venue options

Team.MyTeam, Team.Single views
* Update display for venue, match day/time

--- a/League/Views/Shared/Components/TeamEditor/Default.cshtml
+++ b/League/Views/Shared/Components/TeamEditor/Default.cshtml
@@ -67,15 +67,18 @@ ViewContext.ViewData.TemplateInfo.HtmlFieldPrefix = Model.HtmlFieldPrefix;
 <script type="text/javascript" site-on-modal-shown="true" site-on-content-loaded="true">
     const onMatchDayOfWeekChangeFunction = function() {
         const matchTimeEle = document.getElementById('@Html.IdFor(m => m.MatchTime)');
+        const matchTimeSpanEle = document.querySelector('span[data-td-target="@nameof(Model.MatchTime)-c"]');
         if (this.value === '') {
-            matchTimeEle.setAttribute('disabled', 'disabled');
-            matchTimeEle.style.cursor = 'not-allowed';
             matchTimeEle.value = '';
-            document.querySelector('span[data-td-target="@nameof(Model.MatchTime)-c"]').style.cursor = 'not-allowed';
+            matchTimeEle.setAttribute('readonly', '');
+            matchTimeEle.style.cursor = 'not-allowed';
+            matchTimeEle.style.backgroundColor = 'var(--bs-gray-100)';
+            matchTimeSpanEle.style.display = 'none';
         } else {
-            matchTimeEle.removeAttribute('disabled');
+            matchTimeEle.removeAttribute('readonly');
             matchTimeEle.style.cursor = 'auto';
-            document.querySelector('span[data-td-target="@nameof(Model.MatchTime)-c"]').style.cursor = 'pointer';
+            matchTimeEle.style.backgroundColor = '';
+            matchTimeSpanEle.style.display = 'block';
         }
     };
     const matchDayOfWeek = document.getElementById('@Html.IdFor(m => m.MatchDayOfWeek)');
