--- a/League/Views/Team/_MyTeamMessagesPartial.cshtml
+++ b/League/Views/Team/_MyTeamMessagesPartial.cshtml
@@ -13,7 +13,7 @@
                 W‌rite(_MyTeamMessagesPartial.TeamDataSuccess);
                 break;
             case MyTeamMessageModel.MessageId.TeamDataFailure:
-                W‌rite(_MyTeamMessagesPartial.TeamDataSuccess);
+                W‌rite(_MyTeamMessagesPartial.TeamDataFailure);
                 break;
             case MyTeamMessageModel.MessageId.MemberAddSuccess:
                 W‌rite(_MyTeamMessagesPartial.MemberAddSuccess);
