--- a/League/Views/TeamApplication/Start.cshtml
+++ b/League/Views/TeamApplication/Start.cshtml
@@ -17,7 +17,7 @@
         <div class="col-12">
             <h4 class="h4">Who can register</h4>
             <p>
-                Eligible team members can easily register their team for the next season.
+                Team contacts can easily register their team for the next season.
                 This applies to all teams that have ever participated in a season.
             </p>
             <p>
@@ -37,9 +37,9 @@
             <p>
                 To ensure that the match day can be determined automatically and without overlap, please note the following:
                 <ul>
-                    <li>All teams using one field of a venue at the same time must select that venue.</li>
+                    <li>All teams using one field of a venue at the same time <strong>must</strong> select that venue.</li>
                     <li>
-                        If several fields are available at a venue that can be used simultaneously,
+                        If several fields are available at a venue that can be used <strong>simultaneously</strong>,
                         a separate venue should be created for each field, and assigned to the using team.
                     </li>
                 </ul>
