--- a/League/Views/TeamApplication/Start.de.cshtml
+++ b/League/Views/TeamApplication/Start.de.cshtml
@@ -19,7 +19,7 @@
         <div class="col-12">
             <h4 class="h4">Wer kann anmelden</h4>
             <p>
-                Berechtigte Mitglieder der Teams können ihr Team sehr einfach für die nächste Saison anmelden.
+                Teamkontakte können ihr Team sehr einfach für die nächste Saison anmelden.
                 Das gilt für alle Teams die jemals an einer Saison teilgenommen haben.
             </p>
             <p>
@@ -30,17 +30,17 @@
                 Folgende Angaben werden abgefragt und sollten daher zur Hand sein:
                 <ul>
                     <li>Teamname</li>
-                    <li>Names des Vereins (sofern zutreffend)</li>
+                    <li>Name des Vereins (sofern zutreffend)</li>
                     <li>Wochentag und Uhrzeit der Heimspiele</li>
-                    <li>Name und genau Anschrift des Spielorts</li>
+                    <li>Name und genaue Anschrift des Spielorts</li>
                 </ul>
             </p>
             <h4 class="h4">Spielort</h4>
             <p>
-                Damit die Spieltag automatisch und ohne Überschneidungen ermittelt werden können,
+                Damit die Spieltage automatisch und ohne Überschneidungen ermittelt werden können,
                 bitte folgendes beachten:
                 <ul>
-                    <li>Alle Teams, die ein Feld eines Spielort zeitgleich nutzen, müssen diesen auswählen.</li>
+                    <li>Alle Teams, die ein Feld eines Spielort zeitgleich nutzen, <strong>müssen</strong> diesen auswählen.</li>
                     <li>
                         Wenn an einem Spielort mehrere Felder zur Verfügung stehen, die <strong>zeitgleich</strong> genutzt werden können,
                         soll für jedes Spielfeld ein eigener Spielort angelegt und dem nutzenden Team zuordnet werden.
@@ -55,8 +55,8 @@
                 </li>
                 <li>Die Teamkontakte werden den Mitgliedern anderer Teams angezeigt (und nur diesen).</li>
                 <li>
-                    Zusätzlich zu den Teamkontakten können jedem Team SpielerInnen zugeordnet werden.
-                    Die Kontaktdaten der SpielerInnen sind nur den Teamkollegen zugänglich.
+                    Zusätzlich zu den Teamkontakten können jedem Team Spielerinnen bzw. Spieler zugeordnet werden.
+                    Die Kontaktdaten der Spielerinnen bzw. Spielern sind nur den Teamkollegen zugänglich.
                 </li>
             </ul>
         </div>
