--- a/League/Views/TeamApplication/Confirm.cshtml
+++ b/League/Views/TeamApplication/Confirm.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Globalization
 @using Axuno.Tools.DateAndTime
 @using League.Controllers
+@using League.Models.TeamApplicationViewModels
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.MultiTenancy
 @inject IViewLocalizer Localizer
@@ -27,30 +28,55 @@
             <div class="text-success col-md-3">@Localizer["Club"]</div>
             <div class="col-md-9">@Model.SessionModel.Team.ClubName</div>
         }
+        
+        <div class="text-success col-md-3">@Localizer["Home match day"]</div>
+        <div class="col-md-9">
         @if (Model.SessionModel.Team.MatchDayOfWeek.HasValue && Model.SessionModel.Team.MatchTime.HasValue)
         {
             // MatchTime is defined as a zoned time, NOT UTC. It is always the same, never mind DST
-            <div class="text-success col-md-3">@Localizer["Home match day"]</div>
-            <div class="col-md-9 mb-2"><i class="far fa-calendar-alt"></i><span class="d-inline-block me-2"></span>@DateTimeFormatInfo.CurrentInfo.GetDayName((DayOfWeek)Model.SessionModel.Team.MatchDayOfWeek), @(DateTime.UtcNow.Date.Add(Model.SessionModel.Team.MatchTime.Value.ToTimeSpan()).ToShortTimeString()) @(TimeZoneConverter.ToZonedTime(DateTime.UtcNow)!.Abbreviation)</div>
+            <i class="far fa-calendar-alt"></i><span class="d-inline-block me-2"></span>
+            @DateTimeFormatInfo.CurrentInfo.GetDayName((DayOfWeek)Model.SessionModel.Team.MatchDayOfWeek)<text>, </text>@(DateTime.UtcNow.Date.Add(Model.SessionModel.Team.MatchTime.Value.ToTimeSpan()).ToShortTimeString())<text> </text>@(TimeZoneConverter.ToZonedTime(DateTime.UtcNow)!.Abbreviation)
         }
-        <div class="text-success col-md-3">@(Model.SessionModel.Venue!.IsNew ? Localizer["New venue"] : Localizer["Existing venue"])</div>
-        <div class="col-md-7 mb-2">
-            <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block me-2"></span><span class="fw-bold">@Model.SessionModel.Venue.Name</span></div>
-            <div>@(string.Join(", ", Model.SessionModel.Venue.PostalCode, Model.SessionModel.Venue.City, Model.SessionModel.Venue.Street))</div>
-        </div>
-        @if (!string.IsNullOrWhiteSpace(Model.SessionModel.Venue.Direction))
+        else
         {
-            <div class="text-success col-md-3">@Localizer["Directions, hints"]</div>
+            <span>[@(Localizer["Not specified"])]</span>
+        }
+        </div>
+        @if (Model.SessionModel.VenueIsSet == ApplicationSessionModel.TeamVenueSetKind.NoVenue)
+        {
+            <div class="text-success col-md-3">@Localizer["Venue"]</div>
             <div class="col-md-7 mb-2">
-                <div><i class="fas fa-info-circle"></i><span class="d-inline-block me-2"></span>@Model.SessionModel.Venue.Direction</div>
+                [@(Localizer["There is no venue assigned to the team"])]
             </div>
+        }
+        else
+        {
+            <div class="text-success col-md-3">@(Model.SessionModel.Venue!.IsNew ? Localizer["New venue"] : Localizer["Existing venue"])</div>
+            <div class="col-md-7 mb-2">
+                <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block me-2"></span><span class="fw-bold">@Model.SessionModel.Venue.Name</span></div>
+                <div>@(string.Join(", ", Model.SessionModel.Venue.PostalCode, Model.SessionModel.Venue.City, Model.SessionModel.Venue.Street))</div>
+            </div>
+            @if (!string.IsNullOrWhiteSpace(Model.SessionModel.Venue.Direction))
+            {
+                <div class="text-success col-md-3">@Localizer["Directions, hints"]</div>
+                <div class="col-md-7 mb-2">
+                    <div><i class="fas fa-info-circle"></i><span class="d-inline-block me-2"></span>@Model.SessionModel.Venue.Direction</div>
+                </div>
+            }
         }
     </div>
     <div class="row">
         <div class="mb-3 col-12 col-md-6">
             <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.Confirm)" asp-route-tenant="@tenantUrlSegment" method="post" role="form" novalidate>
-                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary d-inline-block">@Localizer["Back"]</a>
-                <input type="hidden" id="Done" name="Done" value="true" />
+                @if (Model.SessionModel.VenueIsSet == ApplicationSessionModel.TeamVenueSetKind.NoVenue)
+                {
+                    <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectVenue)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary d-inline-block">@Localizer["Back"]</a>
+                }
+                else
+                {
+                    <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary d-inline-block">@Localizer["Back"]</a>
+                }
+                <input type="hidden" id="Done" name="Done" value="true"/>
                 <button type="submit" class="btn btn-primary d-inline-block ">@Localizer["Confirm and save"]</button>
             </form>
         </div>
